# caut-c11-stream

./: .gitignore  .travis.yml  Makefile  README.md  caut-c11-stream.cabal  run_crucible.sh  stack.yaml
lib/Cauterize/C11Stream/: CDescriptors.hs  CInfo.hs  CrucibleInterface.hs  HDescriptors.hs  HFile.hs  HInfo.hs  HInfoDefines.hs  HTypes.hs  StaticFiles.hs  Util.hs  Version.hs
static/: cauterize.c  cauterize.h  cauterize_decode.c  cauterize_descriptors.c  cauterize_descriptors.h  cauterize_encode.c  cauterize_encode.h  cauterize_info.h  cauterize_iterators.c  cauterize_iterators.h  cauterize_types.h  cauterize_util.c  cauterize_util.h  crucible_interface.h  crucible_main.c  test_main.c
static/test/: .gitignore  caut_test.schema  run.sh  test_main.c
static/test/caut_test.dSYM/Contents/: Info.plist
