name:                caut-c11-stream
version:             0.1.0.0
license-file:        LICENSE
author:              John Van Enk
maintainer:          vanenkj@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       cauterize >= 0.1.0.0
  exposed-modules:     Cauterize.C11Stream.HFile

executable caut-c11-stream
  hs-source-dirs:      bin
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base >=4.7 && <4.8,
                       caut-c11-stream,
                       cauterize >= 0.1.0.0,
                       optparse-applicative
  default-language:    Haskell2010
  other-modules:       Cauterize.C11Stream.Options
