name:                caut-c11-stream
version:             0.1.0.0
license-file:        LICENSE
author:              John Van Enk
maintainer:          vanenkj@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , cauterize >= 0.1.0.0
                     , interpolate
                     , containers
                     , text
                     , file-embed
                     , bytestring
  exposed-modules:     Cauterize.C11Stream.HFile
                     , Cauterize.C11Stream.HTypes
                     , Cauterize.C11Stream.HDescriptors
                     , Cauterize.C11Stream.CDescriptors
                     , Cauterize.C11Stream.Util
                     , Cauterize.C11Stream.StaticFiles
                     , Cauterize.C11Stream.CrucibleInterface


executable caut-c11-stream
  hs-source-dirs:      bin
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -threaded
  build-depends:       base >=4.7 && <4.8
                     , caut-c11-stream
                     , cauterize >= 0.1.0.0
                     , optparse-applicative
                     , directory
                     , filepath
                     , text
                     , bytestring
  default-language:    Haskell2010
  other-modules:       Cauterize.C11Stream.Options
